package EchoNote.Jack;

public enum ApprovalStatus {
    DRAFT,
    APPROVED
}