package EchoNote.Jack;

public enum ExportDestination {
    DRIVE,
    FILE,
    CLIPBOARD,
    MAIL
}
