package EchoNote.Jack;

public enum ExportFormat {
    GOOGLE_DOC,
    MARKDOWN,
    CLIPBOARD,
    EMAIL
}