package EchoNote.Jack;

public enum TranscriptSource {
    LIVE,
    IMPORTED
}